<resources>
    <string name="app_name">Weather App</string>
    <string name="weather">Météo</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_24_c">24°C</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="_5_30pm">5:30pm</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="ok">OK</string>
    <string name="launch_activity">Launch activity</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="update">Update</string>
    <string name="today">Aujourd\'hui</string>
    <string name="_92">92%</string>
    <string name="_21_15">21°/15°</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="tomorow">Demain</string>
    <string name="Jour3">Jour 3</string>
    <string name="Jour4">Jour 4</string>
    <string name="Jour5">Jour 5</string>
    <string name="Jour6">Jour 6</string>
    <string name="Jour7">Jour 7</string>
</resources>