<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".network.ui.MainActivity">

    <Button
        android:id="@+id/foreground_only_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/weather"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foreground_only_location_button" />

    <TextView
        android:id="@+id/timezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="Paris"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foreground_only_location_button" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="408dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/_24_c"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/errorText"
        app:layout_constraintEnd_toStartOf="@+id/errorText"
        app:layout_constraintStart_toStartOf="@+id/errorText"
        app:layout_constraintTop_toTopOf="@+id/errorText" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/something_went_wrong"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="370dp"
        android:paddingTop="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="30dp"
        android:stretchColumns="0,2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

            <TextView
                android:id="@+id/day1_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_92" />

            <ImageView
                android:id="@+id/day1_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/wind"
                app:tint="#FFF" />

            <TextView
                android:id="@+id/day1_temp_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorow" />

            <TextView
                android:id="@+id/day2_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_92" />

            <ImageView
                android:id="@+id/day2_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/sunset"
                app:tint="#FFF" />

            <TextView
                android:id="@+id/day2_temp_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_15" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/day3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jour3" />

            <TextView
                android:id="@+id/day3_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_92" />

            <ImageView
                android:id="@+id/day3_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/wind"
                app:tint="#FFF" />

            <TextView
                android:id="@+id/day3_temp_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_15" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/day4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jour4" />

            <TextView
                android:id="@+id/day4_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_92" />

            <ImageView
                android:id="@+id/day4_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/sunset"
                app:tint="#FFF" />

            <TextView
                android:id="@+id/day4_temp_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_15" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/day5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jour5" />

            <TextView
                android:id="@+id/day5_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_92" />

            <ImageView
                android:id="@+id/day5_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/wind"
                app:tint="#FFF" />

            <TextView
                android:id="@+id/day5_temp_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_15" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/day6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jour6" />

            <TextView
                android:id="@+id/day6_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_92" />

            <ImageView
                android:id="@+id/day6_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/wind"
                app:tint="#FFF" />

            <TextView
                android:id="@+id/day6_temp_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_15" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/day7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jour7" />

            <TextView
                android:id="@+id/day7_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_92" />

            <ImageView
                android:id="@+id/day7_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/sunrise"
                android:src="@drawable/sunset"
                app:tint="#FFF" />

            <TextView
                android:id="@+id/day7_temp_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_15" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
